Update domain name

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://indigonolan.com/portfolio">
+		<meta property="og:url" content="https://indigo.spot/portfolio">
 		<meta property="og:title" content="Portfolio - Indigo Nolan">
 		<meta property="og:description" content="Portfolio of web applications, games, and development tools created by Indigo Nolan.">
 		
@@ -38,7 +38,7 @@
 			"@type": "Person",
 			"name": "Indigo Nolan",
 			"jobTitle": "Web Developer",
-			"url": "https://indigonolan.com/portfolio",
+			"url": "https://indigo.spot/portfolio",
 			"description": "Portfolio showcasing web applications, games, and development tools",
 			"hasCredential": [
 				{
@@ -66,7 +66,7 @@
 					"@type": "WebApplication",
 					"name": "Unlimited Wordle",
 					"description": "Free unlimited version of the word puzzle game",
-					"url": "https://indigonolan.com/wordle",
+					"url": "https://indigo.spot/wordle",
 					"applicationCategory": "GameApplication"
 				}
 			],
@@ -140,7 +140,7 @@
 									favourites.me</h4>
 								<p itemprop="description">A private media library manager to track your favorite films, TV shows, books, games, and board games. Forget spreading everything across Letterboxd and Goodreads!</p>
 								</a>
-							<a class="project-blog-button" href="https://indigonolan.com/favourites-me">Why I Built This</a>
+							<a class="project-blog-button" href="/favourites-me">Why I Built This</a>
 							</article>
 	
 
@@ -181,7 +181,7 @@
 									Fantasteroids</h4>
 								<p itemprop="description"> An Asteroids-style game you can play for free on Steam. A project I made to learn game development and liked it so much I finished and published it.</p>
 								</a>
-								<a class="project-blog-button" href="https://indigonolan.com/fantasteroids">The Making Of</a>
+								<a class="project-blog-button" href="/fantasteroids">The Making Of</a>
 							
 							</article>
 	
