--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -22,7 +22,7 @@
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://indigonolan.com/tutoring">
+		<meta property="og:url" content="https://indigo.spot/tutoring">
 		<meta property="og:title" content="Tutoring Services - Indigo Nolan">
 		<meta property="og:description" content="Professional maths and computer science tutoring for GCSE and A-Level students.">
 		
@@ -37,7 +37,7 @@
 			"@context": "https://schema.org",
 			"@type": "EducationalOrganization",
 			"name": "Indigo Nolan Tutoring Services",
-			"url": "https://indigonolan.com/tutoring",
+			"url": "https://indigo.spot/tutoring",
 			"description": "Professional tutoring services for Mathematics and Computer Science at GCSE and A-Level",
 			"founder": {
 				"@type": "Person",
