--- a/wordle/index.html
+++ b/wordle/index.html
@@ -22,7 +22,7 @@
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://indigonolan.com/wordle/">
+		<meta property="og:url" content="https://indigo.spot/wordle/">
 		<meta property="og:title" content="Unlimited Wordle - Free Word Game">
 		<meta property="og:description" content="Play unlimited Wordle games for free! No daily limits, infinite word puzzles.">
 		
@@ -38,7 +38,7 @@
 			"@type": "VideoGame",
 			"name": "Unlimited Wordle",
 			"description": "Free unlimited word guessing game where players have 6 attempts to guess a 5-letter word",
-			"url": "https://indigonolan.com/wordle/",
+			"url": "https://indigo.spot/wordle/",
 			"genre": "Word Game",
 			"gamePlatform": "Web Browser",
 			"operatingSystem": "Any",
@@ -51,7 +51,7 @@
 			"author": {
 				"@type": "Person",
 				"name": "Indigo Nolan",
-				"url": "https://indigonolan.com"
+				"url": "https://indigo.spot"
 			}
 		}
 		</script>
