--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://indigonolan.com/">
+		<meta property="og:url" content="https://indigo.spot/">
 		<meta property="og:title" content="Indigo Nolan - Developer Portfolio">
 		<meta property="og:description" content="UK-based web developer. View my projects including apps, games, and web development tools.">
 		
@@ -38,7 +38,7 @@
 			"@type": "Person",
 			"name": "Indigo Nolan",
 			"jobTitle": "Web Developer, Tutor",
-			"url": "https://indigonolan.com",
+			"url": "https://indigo.spot",
 			"sameAs": [
 				"https://github.com/Lem0naise",
 				"https://www.linkedin.com/in/indigonolan"
@@ -225,7 +225,7 @@
 								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Ukrainian, Spanish, and Italian. Please send me foreign book, film, and song recommendations!</li>
 								<li><a target='_blank' href="https://www.flickr.com/people/indigon/">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
 								<li>I often read dozens of books each month, and even <a href="https://favourites.me">built a tool to track them!</a> I'm also in the process of writing a couple of my own. They will probably never be ready. </li>
-								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="https://indigonolan.com/blog/posts/first-past-the-post-broken.html">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
+								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="/blog/posts/first-past-the-post-broken.html">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
 							</ul>
 						</div>
 						<div class="about-item">
