--- a/reaction/index.html
+++ b/reaction/index.html
@@ -8,17 +8,17 @@
 		<meta name="keywords" content="reaction time test, reaction speed, response time, reflexes, visual reaction, gaming reflexes, Indigo Nolan, online test, free"/>
 		<meta name="author" content="Indigo Nolan"/>
 		<meta name="robots" content="index, follow">
-		<link rel="canonical" href="https://indigonolan.com/reaction/">
+		<link rel="canonical" href="https://indigo.spot/reaction/">
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://indigonolan.com/reaction/">
+		<meta property="og:url" content="https://indigo.spot/reaction/">
 		<meta property="og:title" content="Reaction Time Test - Measure Your Response Speed">
 		<meta property="og:description" content="Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli.">
 		<meta property="og:site_name" content="Indigo Nolan">
 		
 		<!-- Twitter -->
-		<meta property="twitter:url" content="https://indigonolan.com/reaction/">
+		<meta property="twitter:url" content="https://indigo.spot/reaction/">
 		<meta property="twitter:title" content="Reaction Time Test - Measure Your Response Speed">
 		<meta property="twitter:description" content="Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli.">
 		
@@ -36,7 +36,7 @@
 			"@type": "WebApplication",
 			"name": "Reaction Time Test",
 			"description": "Test your reaction time with our free online reaction speed tester. Measure how fast you can respond to visual stimuli.",
-			"url": "https://indigonolan.com/reaction/",
+			"url": "https://indigo.spot/reaction/",
 			"author": {
 				"@type": "Person",
 				"name": "Indigo Nolan"
