--- a/404.html
+++ b/404.html
@@ -12,11 +12,11 @@
 <body>
     <header id="header">
         <div class="header-content">
-            <a class="logo" href="./">Indigo Nolan</a>
+            <a class="logo" href="/">Indigo Nolan</a>
             <nav id="menu">
-                <a href="./" class="tab">Home</a>
-                <a href="./portfolio" class="tab">Projects</a>
-                <a href="./blog" class="tab">Writing</a>
+                <a href="/" class="tab">Home</a>
+                <a href="/portfolio" class="tab">Projects</a>
+                <a href="/blog" class="tab">Writing</a>
                 <span onclick="toggle()" class="tab tab-svg">
 						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button'  d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
 					</span>
@@ -33,7 +33,7 @@
                     Hmmm, what are you looking for? Whatever it was, it doesn't exist (anymore). If it was something you still want to find, contact me and I'll see if I can find it!
                 </p>
                 <div style="display: flex; justify-content: center; gap: 16px;">
-                    <a href="./" class="view-all-btn" style="text-decoration: none;">Go Home</a>
+                    <a href="/" class="view-all-btn" style="text-decoration: none;">Go Home</a>
                 </div>
             </div>
         </div>
