Cleaned up css for optimisation

--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQDX6JZ0XF"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-QQDX6JZ0XF');
-		</script>
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Indigo Nolan - Developer Portfolio | UK</title>
+		<title>Indigo Nolan | I build apps, take photos, and write</title>
 		<link rel="stylesheet" href = "stylesheet.css?version=0.5">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-		<meta name="description" content="Indigo Nolan is a UK-based tutor and web developer offering maths and computer science tutoring. View projects including CashCat budgeting app, Fantasteroids game, and web development tools."/>
-		<meta name="keywords" content="Indigo Nolan, web developer, tutoring, tutor, student developer, portfolio, CashCat, Fantasteroids, web development, UK developer"/>
+		<meta name="description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more."/>
+		<meta name="keywords" content="Indigo Nolan, Indigo, Nolan, web developer, software developer, tutoring, tutor, student developer, portfolio, CashCat, Fantasteroids, web development, UK developer"/>
 		<meta name="author" content="Indigo Nolan"/>
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://indigo.spot/">
-		<meta property="og:title" content="Indigo Nolan - Developer Portfolio">
-		<meta property="og:description" content="UK-based web developer. View my projects including apps, games, and web development tools.">
+		<meta property="og:title" content="Indigo Nolan | I build apps, take photos, and write">
+		<meta property="og:description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more.">
 		
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:title" content="Indigo Nolan - Developer Portfolio">
-		<meta property="twitter:description" content="UK-based and web developer. View my projects including apps, games, and web development tools.">
+		<meta property="twitter:title" content="Indigo Nolan | I build apps, take photos, and write">
+		<meta property="twitter:description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more.">
 		
 		<!-- Structured Data -->
 		<script type="application/ld+json">
@@ -37,7 +29,7 @@
 			"@context": "https://schema.org",
 			"@type": "Person",
 			"name": "Indigo Nolan",
-			"jobTitle": "Web Developer, Tutor",
+			"jobTitle": "Web Developer",
 			"url": "https://indigo.spot",
 			"sameAs": [
 				"https://github.com/Lem0naise",
@@ -93,7 +85,6 @@
 						<h2>I build apps, take photos, and write about things.</h2>
 						<div class="options-grid">
 							<a class="option-card option-primary" href="./portfolio">
-								<!-- inline SVG from imgs/desktop-tower-monitor.svg -->
 								
 							<h3><svg class='option-img'  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6,2C4.89,2 4,2.89 4,4V12C4,13.11 4.89,14 6,14H18C19.11,14 20,13.11 20,12V4C20,2.89 19.11,2 18,2H6M6,4H18V12H6V4M4,15C2.89,15 2,15.89 2,17V20C2,21.11 2.89,22 4,22H20C21.11,22 22,21.11 22,20V17C22,15.89 21.11,15 20,15H4M8,17H20V20H8V17M9,17.75V19.25H13V17.75H9M15,17.75V19.25H19V17.75H15Z" /></svg>
 									Things I've Built</h3>
@@ -272,7 +263,6 @@
 				</div>
 			</section>
 		</main>
-		<script src="js/script.js"></script>
 		<script src="js/dark.js?version=0.1"></script>
 	</body>
 </html>
