--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQDX6JZ0XF"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-QQDX6JZ0XF');
-		</script>
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Portfolio - Indigo Nolan | Projects & Development Work</title>
-		<link rel="stylesheet" href = "../stylesheet.css?version=0.5">
+		<link rel="stylesheet" href = "/stylesheet.css?version=0.5">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
 
 		<meta name="description" content="Portfolio of projects by Indigo Nolan including CashCat budgeting app, Fantasteroids game, web development tools, and open source contributions."/>
@@ -278,7 +270,6 @@
 				</div>
 			</section>
 		</main>
-		<script src="../js/script.js"></script>
 		<script src="../js/dark.js"></script>
 	</body>
 </html>
