--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -1,19 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQDX6JZ0XF"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-QQDX6JZ0XF');
-		</script>
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Tutoring Services - Indigo Nolan | Maths & Computer Science</title>
-		<link rel="stylesheet" href = "../stylesheet.css?version=0.5">
+		<link rel="stylesheet" href = "/stylesheet.css?version=0.5">
+		<link rel="stylesheet" href = "stylesheet.css?version=0.5">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
 
 		<meta name="description" content="Professional tutoring services by Indigo Nolan. Maths and Computer Science tutoring for GCSE and A-Level students. Online sessions with flexible pricing."/>
