--- a/wordle/index.html
+++ b/wordle/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQDX6JZ0XF"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-QQDX6JZ0XF');
-		</script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Unlimited Wordle - Free Word Game | Indigo Nolan</title>
-		<link rel="stylesheet" href="../stylesheet.css?version=0.5">
+		<link rel="stylesheet" href="/stylesheet.css?version=0.5">
 		<link rel="stylesheet" href="stylesheet.css?version=0.3">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
 		
