--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -65,7 +65,7 @@
 			"contactPoint": {
 				"@type": "ContactPoint",
 				"telephone": "+44-7775-156078",
-				"email": "indigogo.nolan@gmail.com",
+				"email": "tutor@indigonolan.com",
 				"contactType": "customer service"
 			}
 		}
@@ -153,7 +153,7 @@
 							<div class="contact-methods-tutoring">
 								<div class="contact-method-tutoring">
 									<strong>📧 Email:</strong>
-									<a href="mailto:indigogo.nolan@gmail.com">indigogo.nolan@gmail.com</a>
+									<a href="mailto:tutor@indigonolan.com">tutor@indigonolan.com</a>
 								</div>
 								<div class="contact-method-tutoring">
 									<strong>📱 Phone:</strong>
