--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							</a>
 
 							
-							<a class="option-card" href='https://www.flickr.com/photos/indigon/' target="_blank">
+							<a class="option-card" href='./photos'>
 								<!-- inline SVG from imgs/camera.svg -->
 								
 								<h3><svg class='option-img'  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4,4H7L9,2H15L17,4H20A2,2 0 0,1 22,6V18A2,2 0 0,1 20,20H4A2,2 0 0,1 2,18V6A2,2 0 0,1 4,4M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9Z" /></svg> Photography</h3>
@@ -217,7 +217,7 @@
 							<h3>Interests when I'm not coding</h3>
 							<ul>
 								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Ukrainian, Spanish, and Italian. Please send me foreign book, film, and song recommendations!</li>
-								<li><a target='_blank' href="https://www.flickr.com/photos/indigon/">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
+								<li><a target='_blank' href="/photos">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
 								<li>I often read dozens of books each month, and even <a href="https://favourites.me">built a tool to track them!</a> I'm also in the process of writing a couple of my own. They will probably never be ready. </li>
 								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="/blog/posts/first-past-the-post-broken.html">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
 							</ul>
