--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Ukrainian, Spanish, and Italian. Please send me foreign book, film, and song recommendations!</li>
 								<li><a target='_blank' href="/photos">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
 								<li>I often read dozens of books each month, and even <a href="https://favourites.me">built a tool to track them!</a> I'm also in the process of writing a couple of my own. They will probably never be ready. </li>
-								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="/blog/posts/first-past-the-post-broken.html">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
+								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
 							</ul>
 						</div>
 						<div class="about-item">
