--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Indigo Nolan | I build apps, take photos, and write</title>
+		<title>Indigo Nolan - I build apps, take photos, and write</title>
 		<link rel="stylesheet" href = "stylesheet.css?version=0.6">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -15,12 +15,12 @@
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://indigo.spot/">
-		<meta property="og:title" content="Indigo Nolan | I build apps, take photos, and write">
+		<meta property="og:title" content="Indigo Nolan - I build apps, take photos, and write">
 		<meta property="og:description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more.">
 		
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:title" content="Indigo Nolan | I build apps, take photos, and write">
+		<meta property="twitter:title" content="Indigo Nolan - I build apps, take photos, and write">
 		<meta property="twitter:description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more.">
 		
 		<!-- Structured Data -->
