--- a/blog.html
+++ b/blog.html
@@ -8,19 +8,31 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
 <div class="blog-header">
     <h1>Blog</h1>
 
+    {% capture tags %}
+        {% for tag in site.tags %}
+            {{ tag[0] }}
+        {% endfor %}
+        {% endcapture %}
+    {% assign sortedtags = tags | split:' ' | sort %}
 
-      <p class="blog-subtitle">subscribe via <a href="{{ "/feed.xml" | relative_url }}">RSS</a> • <a href="https://allegedly.news">satire news</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding</a></p>
+    <p class="blog-subtitle">filter: 
+    {% for tag in sortedtags %}
+    <a href='#{{tag}}'>{{tag}}</a> {%unless forloop.last %}• {%endunless%}
+    {% endfor %}
+    </p>
+
+
+     <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
+
+
+      <p class="blog-subtitle">other: <a href="{{ "/feed.xml" | relative_url }}">RSS</a> • <a href="https://allegedly.news">satire news ↗</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
    
-
 </div>
 
 <div class="blog-posts">
 
         <div id="blog-posts-container">
     
-
-
-     <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
 
 
             <h2 class="tag-heading">latest</h2>
@@ -32,23 +44,6 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
             </article>
             {% endfor %}
 
-
-     <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
-
-
-    {% capture tags %}
-        {% for tag in site.tags %}
-            {{ tag[0] }}
-        {% endfor %}
-        {% endcapture %}
-    {% assign sortedtags = tags | split:' ' | sort %}
-
-    <p class="blog-subtitle">
-    {% for tag in sortedtags %}
-    <a href='#{{tag}}'>{{tag}}</a> {%unless forloop.last %}• {%endunless%}
-    {% endfor %}
-    </p>
-          
 
 
         {% for tag in sortedtags %}
