--- a/index.html
+++ b/index.html
@@ -207,19 +207,19 @@
 						<div class="about-item">
 							<h3>Interests when I'm not coding</h3>
 							<ul>
-								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Ukrainian, Spanish, and Italian. Please send me foreign book, film, and song recommendations!</li>
-								<li><a target='_blank' href="/photos">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
-								<li>I often read dozens of books each month, and even <a href="https://favourites.me">built a tool to track them!</a> I'm also in the process of writing a couple of my own. They will probably never be ready. </li>
-								<li>I'm interested in current politics and historical politics, and believe in the value of civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short blog post about that</a> if you're interested. I also made a <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
+								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Spanish, and Italian. Please send me foreign book, film, and song recommendations!</li>
+								<li><a href="/photos">I do all kinds of photography.</a> I have a Nikon D7200 and a Tamron 16-300mm.</li>
+								<li>I love reading (and even <a href="https://favourites.me">built a tool to track my books!</a>). I also <a href='/blog'>love writing</a>.</li>
+								<li>I'm interested in current and historical politics, and strongly believe in the value of civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short blog post about that</a> if you're interested. I also made an <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
 							</ul>
 						</div>
 						<div class="about-item">
 							<h3>My Favourite Things</h3>
 							<ul>
-								<li><strong>Films:</strong> Dr Strangelove, 12 Angry Men, Trainspotting, Duel, The Italian Job, Electric Dreams, Duel</li>
-								<li><strong>Books:</strong> I Who Have Never Known Men, What You Are Looking For Is In the Library, Before the Coffee Gets Cold, The Invisible Man, Piranesi, A Short Stay In Hell, Smiley's People</li>
-								<li><strong>Games: </strong> Portal 1 & 2, OpenTTD, Rimworld, Celeste, Papers Please, Professor Layton, The Sims (2), Driver San Francisco</li>
-								<li><strong>Music:</strong> Bizarre Love Triangle (New Order), Vienna (Ultravox), Peaceboy (Edenheight), Mr E's Beautiful Blues (Eels), Purple Rain (Tonka B)</li>
+								<li><b>Films:</b> Dr Strangelove, 12 Angry Men, Trainspotting, Duel, The Italian Job, Electric Dreams, Duel</li>
+								<li><b>Books:</b> I Who Have Never Known Men, What You Are Looking For Is In the Library, Before the Coffee Gets Cold, The Invisible Man, Piranesi, A Short Stay In Hell, Smiley's People</li>
+								<li><b>Games:</b> Portal 1 & 2, OpenTTD, Rimworld, Celeste, Papers Please, Professor Layton, The Sims (2), Driver San Francisco</li>
+								<li><b>Music:</b> Bizarre Love Triangle (New Order), Vienna (Ultravox), Peaceboy (Edenheight), Mr E's Beautiful Blues (Eels), Purple Rain (Tonka B)</li>
 								<li>If you want an easy way to track your favourite things too, check out <a href="https://favourites.me">favourites.me</a>!</li>
 							</ul>
 						</div>
