Refactor tutoring page

--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -92,7 +92,7 @@
 			<section class="content-section remove-bottom" style="padding-top: 1rem;">
 				<div class="section-content">
                     <h2>Tutoring Services </h2>
-					<p class="services-intro">Professional tutoring in Mathematics and Computer Science for GCSE and A-Level students. I can also cover higher Web Development, Python Programming, Algorithms, Data Structures. I can also help with coursework projects and assignments.</p>
+					<p class="services-intro">I offer professional tutoring in Mathematics and Computer Science for GCSE and A-Level students. I can  cover higher Web Development, Python Programming, Algorithms, Data Structures, and can also help with coursework projects and assignments.</p>
 				</div>
 			</section>
 
@@ -103,8 +103,8 @@
 					
 					<div class="pricing-header">
 						<div class="pricing-toggle">
-							<button class="pricing-btn active" onclick="setPricing('gcse')">GCSE Level</button>
-							<button class="pricing-btn" onclick="setPricing('alevel')">A-Level</button>
+							<button class="pricing-btn active" data-level="g">GCSE</button>
+							<button class="pricing-btn" data-level="a">A-Level</button>
 						</div>
 					</div>
 					
