Add canonical links to all pages

--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheet.css?version=0.6">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="description" content="Page not found - Indigo Nolan's website" />
+<link rel="canonical" href="https://indigo.spot/404/">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <nav id="menu">
                 <a href="/" class="tab">Home</a>
                 <a href="/portfolio" class="tab">Projects</a>
-                <a href="/blog" class="tab">Writing</a>
+                <a href="/blog" class="tab">Blog</a>
                 <span onclick="toggle()" class="tab tab-svg">
 						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button'  d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
 					</span>
@@ -28,9 +29,9 @@
         <div class="welcome-section">
             <div class="welcome-content">
                 <h1 style="font-size: 120px; font-weight: 700; color: var(--accent); margin: 0 0 16px;">404</h1>
-                <h2 style="font-size: 36px; font-weight: 600; margin: 0 0 24px; color: var(--text);">Page Not Found</h2>
+               
                 <p style="font-size: 18px; color: var(--text-light); margin: 0 0 48px; max-width: 500px; margin-left: auto; margin-right: auto; margin-bottom: 48px;">
-                    Hmmm, what are you looking for? Whatever it was, it doesn't exist (anymore). If it was something you still want to find, contact me and I'll see if I can find it!
+                    If you were looking for a blog article, I've recently <a href="/blog">moved my blog articles here, so it'll be there</a>. If you were looking for something else, go to my home page and see if it's moved there! If you still can't find it, contact me with the links on my homepage and I'll see if I can find it for you!
                 </p>
                 <div style="display: flex; justify-content: center; gap: 16px;">
                     <a href="/" class="view-all-btn" style="text-decoration: none;">Go Home</a>
