--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
      <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
 
 
-      <p class="blog-subtitle">other: <a href="{{ "/feed.xml" | relative_url }}">RSS</a> • <a href="https://allegedly.news">satire news ↗</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
+      <p class="blog-subtitle"><a href="{{ "/feed.xml" | relative_url }}">follow blog (RSS)</a> • <a href="https://allegedly.news">satire news ↗</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
    
 </div>
 
