--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
 		<title>Portfolio - Indigo Nolan | Projects & Development Work</title>
 		<link rel="stylesheet" href = "/stylesheet.css?version=0.6">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
-
+		<link rel="canonical" href="https://indigo.spot/portfolio/">
 		<meta name="description" content="Portfolio of projects by Indigo Nolan including CashCat budgeting app, Fantasteroids game, web development tools, and open source contributions."/>
 		<meta name="keywords" content="Indigo Nolan, portfolio, projects, CashCat, Fantasteroids, web development, game development, open source"/>
 		<meta name="author" content="Indigo Nolan"/>
@@ -77,7 +77,7 @@
 					<a href="../" class="tab">Home</a>
 					<a href="./" class="tab active">Projects</a>
 
-					<a href="../blog" class="tab">Writing</a>
+					<a href="../blog" class="tab">Blog</a>
 					<span onclick="toggle()" class="tab tab-svg">
 						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button' d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
 					</span>
