--- a/palette/index.html
+++ b/palette/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Generate beautiful color palettes with multiple harmony modes"/>
 		<meta name="keywords" content="Indigo Nolan, Colour Palette, Color Generator, Design Tools"/>
 		<meta name="author" content="Indigo Nolan"/>
+		<link rel="canonical" href="https://indigo.spot/palette/">
 	</head>
 	
 	<body>
