--- a/photos/index.html
+++ b/photos/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/stylesheet.css?version=0.6">
 		<link rel="stylesheet" href="./stylesheet.css?version=0.1">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
-
+		<link rel="canonical" href="https://indigo.spot/photos/">
 		<meta name="description" content="Photography portfolio by Indigo Nolan featuring landscape, street, and documentary photography from travels and everyday moments."/>
 		<meta name="keywords" content="Indigo Nolan, photography, portfolio, landscape photography, street photography, travel photography, visual stories"/>
 		<meta name="author" content="Indigo Nolan"/>
@@ -47,7 +47,7 @@
 				<nav id="menu">
 					<a href="/" class="tab">Home</a>
 					<a href="/portfolio" class="tab">Projects</a>
-					<a href="/blog" class="tab">Writing</a>
+					<a href="/blog" class="tab">Blog</a>
 					<span onclick="toggle()" class="tab tab-svg">
 						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button' d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
 					</span>
