--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href = "/stylesheet.css?version=0.6">
 		<link rel="stylesheet" href = "stylesheet.css?version=0.6">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
-
+		<link rel="canonical" href="https://indigo.spot/tutoring/">
 		<meta name="description" content="Professional tutoring services by Indigo Nolan. Maths and Computer Science tutoring for GCSE and A-Level students. Online sessions with flexible pricing."/>
 		<meta name="keywords" content="Indigo Nolan, tutoring, maths tutor, computer science tutor, GCSE, A-Level, online tutoring, UK"/>
 		<meta name="author" content="Indigo Nolan"/>
@@ -79,7 +79,7 @@
 				<nav id="menu">
 					<a href="../" class="tab">Home</a>
 					<a href="../portfolio" class="tab">Projects</a>
-					<a href="../blog" class="tab">Writing</a>
+					<a href="../blog" class="tab">Blog</a>
 					<span onclick="toggle()" class="tab tab-svg">
 						<svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path id='toggle-button'  d="M12 2A9.91 9.91 0 0 0 9 2.46A10 10 0 0 1 9 21.54A10 10 0 1 0 12 2Z" /></svg>
 					</span>
