--- a/wordle/index.html
+++ b/wordle/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/stylesheet.css?version=0.6">
 		<link rel="stylesheet" href="stylesheet.css?version=0.3">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
-		
+		<link rel="canonical" href="https://indigo.spot/wordle/">
 		<meta name="description" content="Play unlimited Wordle games for free! Guess the 5-letter word in 6 tries. No daily limits, infinite puzzles. Created by Indigo Nolan."/>
 		<meta name="keywords" content="Wordle, unlimited wordle, word game, puzzle, free games, 5 letter words, Indigo Nolan"/>
 		<meta name="author" content="Indigo Nolan"/>
