--- a/photos/index.html
+++ b/photos/index.html
@@ -99,7 +99,7 @@
 							</div>
 							<div class="photo-content">
 								<h3>Anger in solidarity</h3>
-								<p class="photo-location">London, June 2025</p>
+								<p class="photo-location">London, Jun 2025</p>
 								<p class="photo-description"></p>
 							</div>
 						</article>
@@ -114,6 +114,19 @@
 								<p class="photo-description"></p>
 							</div>
 						</article>
+						
+
+						<article class="photo-item featured-photo">
+							<div class="photo-container">
+								<a href='
+                        https://live.staticflickr.com/65535/54442492999_641a871bcc_o.jpg'><img src="https://live.staticflickr.com/65535/54442492999_b39574c052_z.jpg" alt="Lighthouse Portsmouth" class="photo-image" loading="lazy"></a>
+							</div>
+							<div class="photo-content">
+								<h3>Lighthouse</h3>
+								<p class="photo-location">April 2025</p>
+
+							</div>
+						</article>
 
 
                          <article class="photo-item featured-photo">
@@ -121,7 +134,7 @@
 								<a href='https://live.staticflickr.com/65535/53778297043_2dbc15c3c9_o.jpg'><img src="https://live.staticflickr.com/65535/53778297043_fcfa22bcc3_z.jpg" alt="A holly leaf in black and white" class="photo-image" loading="lazy"></a>
 							</div>
 							<div class="photo-content">
-								<h3>Holly</h3>
+								<h3>Holly at dusk</h3>
 								<p class="photo-location">June 2024</p>
 								<p class="photo-description"></p>
 							</div>
@@ -138,13 +151,15 @@
 							</div>
 						</article>
 
+
+
                         <article class="photo-item featured-photo">
 							<div class="photo-container">
 								<a href='https://live.staticflickr.com/65535/53808434871_c3bec26d62_o.jpg'><img src="https://live.staticflickr.com/65535/53808434871_faf6becbf5_z.jpg" alt="A sign reading I just really like plants" class="photo-image" loading="lazy"></a>
 							</div>
 							<div class="photo-content">
 								<h3>I just really like plants</h3>
-								<p class="photo-location">June 2024</p>
+								<p class="photo-location">London, Jun 2024</p>
 
 							</div>
 						</article>
@@ -161,6 +176,19 @@
 							</div>
 						</article>
 
+
+
+						<article class="photo-item featured-photo">
+							<div class="photo-container">
+								<a href='
+                        https://live.staticflickr.com/65535/54151942301_ce8ccf2289_o.jpg'><img src="https://live.staticflickr.com/65535/54151942301_42407fcf15_z.jpg" alt="Lightpainting" class="photo-image" loading="lazy"></a>
+							</div>
+							<div class="photo-content">
+								<h3>Lightpainting</h3>
+								<p class="photo-location">June 2024</p>
+
+							</div>
+						</article>
 
 					</div>
 				</div>
