--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="canonical" href="https://indigo.spot/">
 		<meta name="description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more."/>
-		<meta name="keywords" content="Indigo Nolan, Indigo, Nolan, web developer, software developer, tutoring, tutor, student developer, portfolio, CashCat, Fantasteroids, web development, UK developer"/>
+		<meta name="keywords" content="Indigo Nolan, Indy Nolan, Indigo, Indy, Nolan, web developer, software developer, student, developer, portfolio, CashCat, Fantasteroids, web development, UK"/>
 		<meta name="author" content="Indigo Nolan"/>
 		
 		<!-- Open Graph / Facebook -->
@@ -78,7 +78,7 @@
 
 		<main id="cont">
 			<section class="welcome-section">
-				<div class="welcome-content">
+				<div class="welcome-content glass-card">
 					<h1>Hi, I'm Indigo!</h1>
 					
 					<div class="looking-for">
