Add friends and collaborators

--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
 								<li>If you want an easy way to track your favourite things too, check out <a href="https://favourites.me">favourites.me</a>!</li>
 							</ul>
 						</div>
+
+						<div class="about-item about-stretch">
+							<h3>Friends & Collaborators</h3>
+							<ul>
+								<li><a href="https://josh.software" target="_blank" rel="noopener">Josh Wilcox</a> - CashCat co-builder and fellow student</li>
+								<li><a href="https://indigowg.com" target="_blank" rel="noopener">Indigo Wolf-Garraway</a> - Name buddy and fellow student</li>
+								<li><a href="https://github.com/creative-pig">Joe Williams</a> - Creator of the hit game <a href="https://creative-pig.github.io/politoedle">Politoedle</a> and fellow student</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</section>
