Update welcome section to include a link to github

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<main id="cont">
 			<section class="welcome-section">
 				<div class="welcome-content glass-card">
-					<h1>Hi, I'm Indigo!</h1>
+					<h1><a href="https://github.com/Lem0naise">Hi, I'm Indigo!</a></h1>
 					
 					<div class="looking-for">
 						<h2>I build apps, take photos, and write about things.</h2>
