Fix structured data

--- a/reaction/index.html
+++ b/reaction/index.html
@@ -42,7 +42,7 @@
 				"name": "Indigo Nolan"
 			},
 			"applicationCategory": "GameApplication",
-			"operatingSystem": "Web Browser",
+			"operatingSystem": "Web Browser"
 		}
 		</script>
 	</head>
