Update status button text and enhance status display styles

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					
 					<div class="looking-for">
 						<div class='status-updates' id='status-updates'>
-							<button class='status-button' id='status-button'>What am I up to now?</button>
+							<button class='status-button' id='status-button'>What am I doing now?</button>
 							<div class='status-content' id='status-content'>
 								<ul>
 									<li id='custom-status'>Currently: Unwinding</li>
