--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
         {% endcapture %}
     {% assign sortedtags = tags | split:' ' | sort %}
 
-    <p class="blog-subtitle">filter: 
+    <p class="blog-subtitle">themes: 
     {% for tag in sortedtags %}
     <a href='#{{tag}}'>{{tag}}</a> {%unless forloop.last %}• {%endunless%}
     {% endfor %}
@@ -25,7 +25,7 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
      <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
 
 
-      <p class="blog-subtitle"><a href="{{ "/feed.xml" | relative_url }}">follow blog (RSS)</a> • <a href="{{ "/thoughts/" | relative_url }}">stream of thoughts</a> • <a href="https://allegedly.news">satire news ↗</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
+      <p class="blog-subtitle">other: <a href="{{ "/feed.xml" | relative_url }}">follow blog (RSS)</a> • <a href="https://allegedly.news">satire news ↗</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
    
 </div>
 
