Remove tutoring, replace with github

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,7 +104,7 @@
 									 CashCat ↗</h3>
 								<span class="featured-badge">Featured</span>
 							</div>
-							<p itemprop="description">A free and user-focused personal budgeting webapp. Building early access right now with Josh Wilcox!
+							<p itemprop="description">A free and user-focused personal budgeting webapp. Building early access right now!
 							</p>
 							<div class="project-links">
 								<p class="primary-link" >Try CashCat →</p>
