Update introduction text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									<li id='custom-status'>Currently: Building web applications and studying computer science</li>
 									<li id='weather-status'>My weather: Probably raining in Southampton.</li>
 									<li id='github-activity'>GitHub: Active in open source development, building CashCat</li>
-									<li id='intro'>I'm a computer science student who builds apps and websites, takes photos, and writes.</li>
+									<li id='intro'>I'm a computer science student who builds apps and websites.</li>
 									
 									
 								</ul>
