--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 					<h2>Let's get in touch!</h2>
 					<div class="contact-methods">
 						<a href="./portfolio/IndigoNolan-Resume.pdf" target="_blank" class="contact-method" rel="noopener">
-							<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M8 17V15H16V17H8M16 10L12 14L8 10H10.5V7H13.5V10H16M5 3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.9 21 3 20.11 3 19V5C3 3.9 3.9 3 5 3M5 5V19H19V5H5Z"" /></svg>
+							<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M8 17V15H16V17H8M16 10L12 14L8 10H10.5V7H13.5V10H16M5 3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.9 21 3 20.11 3 19V5C3 3.9 3.9 3 5 3M5 5V19H19V5H5Z" /></svg>
 							<span>View Resume</span>
 						</a>
 						<a href="https://github.com/Lem0naise" target="_blank" class="contact-method" rel="noopener">
