--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Spanish, and Italian. Please <a href="mailto:rec@indigonolan.com">send me</a> foreign book, film, and song recommendations!</li>
 								<li><a href="/photos">I do all kinds of photography</a> with my Nikon D7200 + Tamron 16-300mm.</li>
 								<li>I love reading (and even <a href="https://favourites.me">built a tool to track my books!</a>). I also <a href='/blog'>love writing</a>.</li>
-								<li>I'm interested in current and historical politics, and strongly believe in the value of civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short blog post about that</a> if you're interested. I also made an <a href="https://politicalplayground.sherpa.software" target="_blank">election simulation game if you're into that.</a></li>
+								<li>I'm interested in current and historical politics, and strongly believe in the value of civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short blog post about that</a> if you're interested. I also made an <a href="https://pp.indigo.spot" target="_blank">election simulation game if you're into that.</a></li>
 							</ul>
 						</div>
 						<div class="about-item">
