--- a/photos/index.html
+++ b/photos/index.html
@@ -66,15 +66,25 @@
 
 						<article class="photo-item featured-photo">
 							<div class="photo-container">
+								<a href='https://upload.wikimedia.org/wikipedia/commons/0/01/Palestine_Action_Protest%2C_London%2C_Saturday_6th_September_-_10.jpg'><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Palestine_Action_Protest%2C_London%2C_Saturday_6th_September_-_10.jpg/1599px-Palestine_Action_Protest%2C_London%2C_Saturday_6th_September_-_10.jpg?20250913215805" alt="A man being arrested by Met Police in London" class="photo-image" loading="lazy"></a>
+							</div>
+							<div class="photo-content">
+								<h3>More state oppression</h3>
+								<p class="photo-location">London, Sep 2025</p>
+								<p class="photo-description">Featured on <a href='https://ypolitics.co.uk/news/uk-palestine-action-protests---productive-or-performative'>YPolitics</a>, <a href='https://en.wikipedia.org/wiki/Terrorism_Act_2000#/media/File:Palestine_Action_Protest,_London,_Saturday_6th_September_-_10.jpg'>Wikipedia</a>.</p>
+							</div>
+						</article>
+						
+						<article class="photo-item featured-photo">
+							<div class="photo-container">
 								<a href='https://live.staticflickr.com/65535/54771965625_5cb669ffc0_k.jpg'><img src="https://live.staticflickr.com/65535/54771965625_6243c70a12_z.jpg" alt="A man being arrested by Met Police in London" class="photo-image" loading="lazy"></a>
 							</div>
 							<div class="photo-content">
 								<h3>State oppression in Parliament Square</h3>
 								<p class="photo-location">London, Sep 2025</p>
-								<p class="photo-description">As <a href='https://www.counterfire.org/article/a-bad-day-for-the-met-and-a-good-one-for-protest-weekly-briefing'>featured on Counterfire</a>.</p>
+								<p class="photo-description">Featured on <a href='https://www.counterfire.org/article/a-bad-day-for-the-met-and-a-good-one-for-protest-weekly-briefing'>Counterfire</a>.</p>
 							</div>
 						</article>
-
                         
 
 						<article class="photo-item featured-photo">
@@ -125,6 +135,18 @@
 								<h3>Lighthouse</h3>
 								<p class="photo-location">April 2025</p>
 
+							</div>
+						</article>
+
+
+						<article class="photo-item featured-photo">
+							<div class="photo-container">
+								<a href='https://upload.wikimedia.org/wikipedia/commons/a/ac/Paris_Olympics_-_Athletics_%2853913379607%29.jpg'><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Paris_Olympics_-_Athletics_%2853913379607%29.jpg/1599px-Paris_Olympics_-_Athletics_%2853913379607%29.jpg?20240827234042" alt="Athletics at the 2024 Summer Olympics" class="photo-image" loading="lazy"></a>
+							</div>
+							<div class="photo-content">
+								<h3>Paris Olympics, Athletics</h3>
+								<p class="photo-location">Paris, Aug 2024</p>
+								<p class="photo-description">Featured on <a href='https://commons.wikimedia.org/wiki/Category:Athletics_at_the_2024_Summer_Olympics_%E2%80%93_Women%27s_4_%C3%97_100_metres_relay'>Wikipedia</a>.</p>
 							</div>
 						</article>
 
