Update photo portfolio title and add new featured photos

--- a/photos/index.html
+++ b/photos/index.html
@@ -4,7 +4,7 @@
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Photography - Indigo Nolan | Photo Portfolio & Visual Stories</title>
+		<title>Photography - Indigo Nolan | Photo Portfolio</title>
 		<link rel="stylesheet" href="/stylesheet.css?version=0.6">
 		<link rel="stylesheet" href="./stylesheet.css?version=0.1">
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -66,10 +66,33 @@
 
 						<article class="photo-item featured-photo">
 							<div class="photo-container">
+								<a href='https://live.staticflickr.com/65535/54880634907_67eab1d9af_o.jpg'><img src="https://live.staticflickr.com/65535/54880634907_af76eb6830_c.jpg" alt="Far-right protestors in Southampton" class="photo-image" loading="lazy"></a>
+							</div>
+							<div class="photo-content">
+								<h3>Protest at Highfield House</h3>
+								<p class="photo-location">Southampton, Oct 2025</p>
+								<p class="photo-description"></p>
+							</div>
+						</article>
+
+
+						<article class="photo-item featured-photo">
+							<div class="photo-container">
+								<a href='https://live.staticflickr.com/65535/54881787720_0a3bc8f542_o.jpg'><img src="https://live.staticflickr.com/65535/54881787720_45cb3ed6c6_z.jpg" alt="A man shouting through a megaphone in Southampton" class="photo-image" loading="lazy"></a>
+							</div>
+							<div class="photo-content">
+								<h3>Protest at Highfield House</h3>
+								<p class="photo-location">Southampton, Oct 2025</p>
+								<p class="photo-description"></p>
+							</div>
+						</article>
+
+						<article class="photo-item featured-photo">
+							<div class="photo-container">
 								<a href='https://upload.wikimedia.org/wikipedia/commons/0/01/Palestine_Action_Protest%2C_London%2C_Saturday_6th_September_-_10.jpg'><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Palestine_Action_Protest%2C_London%2C_Saturday_6th_September_-_10.jpg/1599px-Palestine_Action_Protest%2C_London%2C_Saturday_6th_September_-_10.jpg?20250913215805" alt="A man being arrested by Met Police in London" class="photo-image" loading="lazy"></a>
 							</div>
 							<div class="photo-content">
-								<h3>More state oppression</h3>
+								<h3>Parliament Square</h3>
 								<p class="photo-location">London, Sep 2025</p>
 								<p class="photo-description">Featured on <a href='https://ypolitics.co.uk/news/uk-palestine-action-protests---productive-or-performative'>YPolitics</a>, <a href='https://en.wikipedia.org/wiki/Terrorism_Act_2000#/media/File:Palestine_Action_Protest,_London,_Saturday_6th_September_-_10.jpg'>Wikipedia</a>.</p>
 							</div>
