Add dark mode functionality with dark-init.js and update styles

--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <title>Page Not Found - Indigo Nolan</title>
     <link rel="stylesheet" href="/stylesheet.css?version=0.6">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <script src="/js/dark-init.js"></script>
     <meta name="description" content="Page not found - Indigo Nolan's website" />
 <link rel="canonical" href="https://indigo.spot/404/">
 </head>
