--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Indigo Nolan - I build apps, take photos, and write</title>
 		<link rel="stylesheet" href = "stylesheet.css?version=0.6">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<script src="/js/dark-init.js"></script>
 		<link rel="canonical" href="https://indigo.spot/">
 		<meta name="description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more."/>
 		<meta name="keywords" content="Indigo Nolan, Indy Nolan, Indigo, Indy, Nolan, web developer, software developer, student, developer, portfolio, CashCat, Fantasteroids, web development, UK"/>
