--- a/photos/index.html
+++ b/photos/index.html
@@ -13,6 +13,7 @@
 		<meta name="keywords" content="Indigo Nolan, photography, portfolio, landscape photography, street photography, travel photography, visual stories"/>
 		<meta name="author" content="Indigo Nolan"/>
 		
+		<script src="../js/dark-init.js"></script>
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://indigo.spot/photos">
