--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -14,6 +14,7 @@
 		<meta name="keywords" content="Indigo Nolan, tutoring, maths tutor, computer science tutor, GCSE, A-Level, online tutoring, UK"/>
 		<meta name="author" content="Indigo Nolan"/>
 		
+		<script src="../js/dark-init.js"></script>
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://indigo.spot/tutoring">
